@@ -42,6 +42,9 @@ What's changed in loggerhead?
     - Fix support for displaying foreign revision ids.
       (Jelmer Vernooij, #736026)
 
+    - Add hook 'controller' to BranchWSGIApp, allowing other bzr plugins
+      to provide custom branch-specific controllers. (Jelmer Vernooij)
+
 
 1.18.1 [24Mar2011]
 ------------------
